# chrisamico.com

./: .gitattributes  .gitignore  .prettierrc  Freezefile.yaml  Makefile  Pipfile  README.md  _base.html  app.py  index.html  links.csv  links.json  load_links.py  metadata.yml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  tarbell_config.py  update.py  update.sh
db/: blog.db  blog.sql  portfolio.yml
docs/: CNAME  blog.rss  index.html  links.rss
links/: links_to_post.sql  load.py  mastodon.py  opengraph.py  update.py
posts/: 2023-01-07-hello.md  2023-01-14-python-setup.md  2023-02-01-three-kinds-of-code.md  2023-02-12-mastodon.md  2023-03-04-muckrock.md  2023-03-05-five-years-of-go.md  2023-03-17-boston-parcel-maps.md  2023-05-20-interactive-app-infrastructure.md  2023-05-30-wildfires-datasette-felt.md  2023-12-17-monsters.md  2023-12-26-jiujitsu-gi-nogi.md  2024-02-13-self-hosted-maps.md  2024-03-11-ecological-approach-self-hosted-maps.md  2024-05-18-self-hosted-maps-open-problems.md  2024-11-07-come-back-tomorrow.md  2025-01-02-goals.md  2025-01-11-wildfires.md  2025-01-18-fire-map.md  2025-01-22-datasette-canned-query-defaults.md  2025-02-01-pope-and-mussolini.md  2025-02-04-pmtiles-mbtiles-tile-join.md  2025-02-09-fanatics-scraper-rust.md  2025-02-19-rust-listcrunch.md  2025-03-06-archive-everything.md  2025-04-24-how-im-using-ai.md  2025-05-23-ai-content-is-boring.md  2025-05-31-ai-counting-cards.md  2025-06-13-44.md  2025-08-17-calendars.md  2025-08-29-migrating-to-uv.md  2025-12-07-uv-new-python-setup.md  (+7 more)
static/: site.css  (+2 more)
(+21 files in other folders)
